discussion/kv_engine/176192/176192_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51606: Add DeadDurabilityMonitor

Add a new type of DurabilityMonitor that we create and use for
vBuckets in the dead state. Currently when we transition to a
dead state vBucket we keep the current DurabilityMonitor (ADM or
PDM). This leads to confusion, and potentially error prone code
as it may not be valid to do certain things with ADMs or PDMs for
a vBucket in the dead state. This allows us to deal with
notifications such as persistence in the DurabilityMonitor of a
vBucket in the dead state in a graceful manner in a future change.

Change-Id: Ic2b8505fa56cd53cf4d1b2bc0f2a4d7af0d56f8a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-15 19:03:22.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-15 19:03:35.000000000
Message: 
Patch Set 8: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/302971/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-06-15 19:07:13.000000000
Message: 
Patch Set 8:

(5 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-15 19:43:47.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/366/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/366/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/278/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/278/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/269/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.cc:28:24: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
DeadDurabilityMonitor::~DeadDurabilityMonitor() noexcept {
                       ^                                 ~
                                                         = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/dead_durability_monitor.h:45:5: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    ~DeadDurabilityMonitor() noexcept;
    ^
                                      override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/sync_write.h:44:7: error: use of undeclared identifier "DurabilityMonitor" [clang-diagnostic-error]
class DurabilityMonitor::SyncWrite {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/269/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/sync_write.h:44:7:
error: use of undeclared identifier "DurabilityMonitor" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/269/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17242/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/265/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/267/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/280/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/289/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/277/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/385/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
